k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyc-weather
  namespace: default
  labels:
    app: eyc-weather
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: eyc-weather
