k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eyc-weather-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - propercourse.app
        - proper-course.app
        - proper-score.app
      secretName: proper-course-tls
  rules:
    - host: propercourse.app
      http:
        paths:
          - pathType: Prefix
            path: "/eyc-weather"
            backend:
              service:
                name: eyc-weather
                port:
                  number: 80
    - host: proper-course.app
      http:
        paths:
          - pathType: Prefix
            path: "/eyc-weather"
            backend:
              service:
                name: eyc-weather
                port:
                  number: 80
    - host: proper-score.app
      http:
        paths:
          - pathType: Prefix
            path: "/eyc-weather"
            backend:
              service:
                name: eyc-weather
                port:
                  number: 80
